--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
 
     <!-- Header -->
-    <header class = "header-container">
+    <header class = "flex-container header">
         <img src="./photos/img-tea-cozy-logo.png">
       <nav>
         <span><a href="#Mission">Mission</a></span>
@@ -19,7 +19,7 @@
     <!-- Main Container -->
 <div class = "maincontainer">
     <!-- Mission Section -->
-<div id ="Mission" class = "mission-container">
+<div id ="Mission" class = "flex-container mission">
   <div class "mission-content">
     <h2>Our Mission</h2>
     <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
@@ -30,7 +30,7 @@
   <div id = "Store" class = "store-container">
     <h2>Tea of the Month</h2>
     <h4>What's Steeping at The Tea Cosy?</h4>
-    <div class = "store-container-flex-items">
+    <div class = "flex-container store-container-items">
       <div class = "item">
         <img src = "./photos/img-berryblitz.jpg">
         <span>Fall Berry Blitz</span>
@@ -55,8 +55,16 @@
   </div>
 
     <!-- Locations Section -->
-<div id = "Locations" class = "locations-container">
+<div id = "Locations" class = "container-locations">
   <h2>Locations</h2>
+  <div class = "flex-container locations">
+    <div class="location">
+    <h3>Downtown</h3>
+    <p>384 West 4th St</p>
+    <p>Suite 108</p>
+    <p>Portland, Maine</p>
+    </div>
+  </div>
   <div class = "location">
     <h3>East Bayside</h3>
     <p>3433 Phiserman's Avenue</p>
