add final HTML and CSS with one error I couldnt fix

--- a/index.html
+++ b/index.html
@@ -10,27 +10,28 @@
     <header class = "flex-container header">
         <img src="./photos/img-tea-cozy-logo.png">
       <nav>
-        <span><a href="#Mission">Mission</a></span>
-        <span><a href="#Store">Featured Tea</a></span>
-        <span><a href="#Locations">Locations</a></span>
+        <span><a href="#mission">Mission</a></span>
+        <span><a href="#store">Featured Tea</a></span>
+        <span><a href="#locations">Locations</a></span>
       </nav>
   </header>
 
     <!-- Main Container -->
 <div class = "maincontainer">
     <!-- Mission Section -->
-<div id ="Mission" class = "flex-container mission">
-  <div class "mission-content">
+<div id ="mission" class="mission-container flex-container">
+  <div class "content">
     <h2>Our Mission</h2>
-    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea</h4>
+    <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
+    </h4>
   </div>
 </div>
 
     <!-- Store Section -->
-  <div id = "Store" class = "store-container">
+  <div id = "store">
     <h2>Tea of the Month</h2>
     <h4>What's Steeping at The Tea Cosy?</h4>
-    <div class = "flex-container store-container-items">
+    <div class = "store-container flex-container">
       <div class = "item">
         <img src = "./photos/img-berryblitz.jpg">
         <span>Fall Berry Blitz</span>
@@ -55,16 +56,15 @@
   </div>
 
     <!-- Locations Section -->
-<div id = "Locations" class = "container-locations">
+<div id = "locations" class = "container-locations">
   <h2>Locations</h2>
-  <div class = "flex-container locations">
+  <div class = "store-locations flex-container">
     <div class="location">
     <h3>Downtown</h3>
     <p>384 West 4th St</p>
     <p>Suite 108</p>
     <p>Portland, Maine</p>
     </div>
-  </div>
   <div class = "location">
     <h3>East Bayside</h3>
     <p>3433 Phiserman's Avenue</p>
@@ -79,6 +79,8 @@
   </div>
 </div>
 </div>
+</div>
+
     <!-- Contact Section -->
 <div id = "contact" class = "contact-container">
   <h2>The Tea Cozy</h2>
