--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <div class = "maincontainer">
     <!-- Mission Section -->
 <div id ="mission" class="mission-container flex-container">
-  <div class "content">
+  <div class = "content">
     <h2>Our Mission</h2>
     <h4>Handpicked, Artisanally Curated, Free Range, Sustainable, Small Batch, Fair Trade, Organic Tea
     </h4>
